# jukebox

./: .gitignore  CMakeLists.txt  Juce_install_notes.txt  README.md  TODO.txt  jukebox.jucer  qwert.txt
Builds/Linux/: Makefile
CMakeModules/: CodeCoverage.cmake
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Libraries/: CMakeLists.txt
Libraries/JuceLibraryCode/: AppConfig.h  CMakeLists.txt  JuceHeader.h
Libraries/googletest/googlemock/include/gmock/: gmock-generated-function-mockers.h
Source/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
Source/Alternatives/: CMakeLists.txt
Source/Alternatives/CreditManager/: CMakeLists.txt  CreditManager.cpp  CreditManager.h
Source/Alternatives/Gui/: Gui.h
Source/Alternatives/Gui/Components/: JukeboxTimer.cpp  ListBox.hpp  ListBoxImplementation.hpp  MultipleAlbumsCanvas.h
Source/Audio/: Formaters.cpp  Formaters.h
Source/Base/: .Application.cpp.swp  Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
Source/Components/: ListBox.cpp  ListBox.h  ListBox.hpp  ListBoxImplementation.hpp  ListBoxQueue.cpp  ListBoxQueue.h  ListBoxVector.cpp  ListBoxVector.h  MainComponent.cpp  MainComponent.h  MultiImageCanvas.cpp  MultiImageCanvas.h  SongsListBox.cpp  SongsListBox.h
Source/Extensions/: CMakeLists.txt
Source/Extensions/Core/: CMakeLists.txt  Core.cpp  Core.h
Source/Extensions/CreditManager/: CMakeLists.txt  CreditManager.cpp  CreditManager.h
Source/Extensions/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
Source/Extensions/Gui/: CMakeLists.txt  Gui.cpp  Gui.h  ResourceString.cpp  ResourceString.h
Source/Extensions/Gui/Components/: AlbumStepCalculator.cpp  AlbumStepCalculator.h  JukeboxTimer.cpp  JukeboxTimer.h  ListBox.hpp  ListBoxImplementation.hpp  MainComponent.cpp  MainComponent.h  MainComponentPositionCalculator.cpp  MainComponentPositionCalculator.h  MainWindow.cpp  MainWindow.h  MultiImageCanvas.cpp  MultipleAlbumsCanvas.cpp  MultipleAlbumsCanvas.h  MusicSetupCanvas.cpp  MusicSetupCanvas.h  SetupPage.cpp  SetupPage.h  SetupPageCanvas.cpp  SetupPageCanvas.h  SingleAlbumCanvas.cpp  SingleAlbumCanvas.h  SingleAlbumPositionCalculator.cpp  SingleAlbumPositionCalculator.h
Source/Extensions/Gui/PositionCalculators/: AlbumStepCalculator.cpp  AlbumStepCalculator.h  MultipleAlbumsCanvasPositionCalculator.cpp  MultipleAlbumsCanvasPositionCalculator.h  MusicSetupCanvasPositionCalculator.cpp  MusicSetupCanvasPositionCalculator.h  SetupPageCanvasPositionCalculator.cpp  SetupPageCanvasPositionCalculator.h  SetupPagePositionCalculator.cpp  SetupPagePositionCalculator.h  StatisticsCanvasPositionCalculator.cpp  StatisticsCanvasPositionCalculator.h
Source/Extensions/Gui/Resources/: ResourceString.cpp  ResourceString.h
Source/Extensions/MusicPlayer/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  MusicPlayerImplementation.cpp  MusicPlayerImplementation.h
Source/Extensions/NoCredits/: CMakeLists.txt  NoCredits.cpp  NoCredits.h
Source/Extensions/Settings/: CMakeLists.txt  Settings.cpp  Settings.h
Source/Extensions/SongBuilder/: CMakeLists.txt  SongBuilder.cpp  SongBuilder.h
Source/Extensions/Statistics/: CMakeLists.txt  Statistics.cpp  Statistics.h
Source/Helpers/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Formaters.cpp  Formaters.h  ScopeGuard.hpp  Song.h  Times.cpp  Times.h
Source/Helpers/DateTime/: CMakeLists.txt
Source/Helpers/DllLoader/: CMakeLists.txt  DllLoader.hpp
Source/Helpers/Exceptions/: CMakeLists.txt  JukeboxException.h  MusicPlayerExceptions.h
Source/Helpers/Formaters/: CMakeLists.txt  Formaters.cpp  Formaters.h
Source/Helpers/Logging/: CMakeLists.txt  LogDefines.h  Logger.cpp  Logger.h  Times.cpp
Source/Helpers/Password/: CMakeLists.txt  Password.cpp  Password.h
Source/Helpers/Signaling/: CMakeLists.txt  Signals.hpp
Source/Helpers/Song/: CMakeLists.txt  Song.h
Source/Helpers/SongBuilder/: CMakeLists.txt  SongBuilder.cpp  SongBuilder.h
Source/Helpers/StdAddons/: CMakeLists.txt  StdAddons.hpp
Source/Helpers/Timer/: CMakeLists.txt  JukeboxTimer.cpp  JukeboxTimer.h
Source/Interfaces/: ICore.h  ICreditManager.h  IFileSystem.h  IGui.h  IMusicPlayer.h  ISettings.h  ISongBuilder.h  IStatistics.h  ResourceId.h
Source/Juce/: CMakeLists.txt
Source/Prod/: CMakeLists.txt
Source/Tests/: CMakeLists.txt  main.cpp
Source/Tests/Core/: CMakeLists.txt  unittest_Core.cpp
Source/Tests/CreditManager/: unittest_CreditManager.cpp
Source/Tests/HelperClasses/: CreditManagerMock.h  FileSystemMock.h  FreeFunctions.h  GuiMock.h  GuiTester.h  JuceEventLoopRunner.h  MusicPlayerMock.h  RectangleMatcher.cpp  RectangleMatcher.h  SettingsMock.h  StatisticsMock.h
Source/Tests/HelperClasses/Compounds/: MainComponentMock.h
Source/Tests/Settings/: CMakeLists.txt
Source/Tests/Statistics/: CMakeLists.txt  unittest_Statistics.cpp
Source/Tests/TestClasses/Alternatives/CreditManager/: CMakeLists.txt  unittest_CreditManager.cpp
Source/Tests/TestClasses/Core/: CMakeLists.txt  componenttest_Core.cpp  integrationtest_Core.cpp  unittest_Core.cpp
Source/Tests/TestClasses/CreditManager/: CMakeLists.txt  unittest_CreditManager.cpp
Source/Tests/TestClasses/Gui/: CMakeLists.txt  GuiTester.h  integrationtest_Gui.cpp  integrationtest_Gui_public_interface.cpp  unittest_AlbumStepCalculator.cpp  unittest_MultipleAlbumsPositionCalculator.cpp  unittest_MusicSetupCanvasPositionCalculator.cpp  unittest_ResourceString.cpp  unittest_SingleAlbumPositionCalculator.cpp
Source/Tests/TestClasses/Helpers/Logger/: CMakeLists.txt  main.cpp  unittest_Logger.cpp
Source/Tests/TestClasses/Helpers/StdAddons/: CMakeLists.txt  unittest_StdAddons.cpp
Source/Tests/TestClasses/Settings/: CMakeLists.txt  unittest_Settings.cpp
Source/Tests/TestClasses/Signaling/: CMakeLists.txt  stest_Signaling.cpp
Source/Tests/TestClasses/Statistics/: CMakeLists.txt  unittest_Statistics.cpp
Source/components/: MainComponent.cpp  MainComponent.h
Source/extensions/: Core.cpp  Core.h  CreditManager.cpp  CreditManager.h  Gui.cpp  Gui.h
Source/interfaces/: ICore.h  ICreditManager.h  (+1 more)
