cmake_minimum_required(VERSION 3.10)

add_subdirectory(Logging)
add_subdirectory(SongBuilder)
add_subdirectory(Signaling)
add_subdirectory(StdAddons)
add_subdirectory(Formaters)
add_subdirectory(Exceptions)
add_subdirectory(Song)
add_subdirectory(Timer)
add_subdirectory(DateTime)
add_subdirectory(Password)
